# c-discover

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.sh  build.yml  check-code-format.yml  check_code_format.sh  check_equivalence_tests.sh  check_headers.sh  check_include_guards.sh  ci.yml  cmake.yml  do_code_format.sh
examples/: basic-advertise.c  basic-self.c  basic.c  test-multicast.c  test-unicast.c
inc/: discover.h  sock.h
include/: discover.h  sock.h
src/: discover.c  sock.c
